refine md